# lib/db/src/schema/index.ts
@@ -5,3 +5,5 @@ export * from "./packages";
 export * from "./orders";
 export * from "./assignments";
 export * from "./reviews";
+export * from "./conversations";
+export * from "./messages";
